blog/kubernetes/ingress/ingress_nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  labels:
    name: nginx-deployment
spec:
  tls:
  - hosts:
    - liveblog.com
    secretName: tls-secret-fast-api
  rules:
  - host: liveblog.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
